<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.risesoft</groupId>
        <artifactId>y9-digitalbase-dependencies</artifactId>
        <version>${revision}</version>
        <relativePath>../y9-digitalbase-dependencies</relativePath>
    </parent>
    <groupId>net.risesoft</groupId>
    <artifactId>y9-digitalbase-parent</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <name>y9-digitalbase-parent</name>
    <description>RiseSoft/Digital Infrastructure dependencies parent</description>
    <url>https://gitee.com/risesoft-y9/y9-core/tree/main/y9-digitalbase-parent</url>

    <licenses>
        <license>
            <name>GNU General Public License (GPL) version 3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>dingzhaojun</name>
            <email>dingzhaojun@risesoft.net</email>
            <organization>risesoft</organization>
            <organizationUrl>https://www.risesoft.net</organizationUrl>
        </developer>
        <developer>
            <name>qinman</name>
            <email>qinman@risesoft.net</email>
            <organization>risesoft</organization>
            <organizationUrl>https://www.risesoft.net</organizationUrl>
        </developer>
        <developer>
            <name>shidaobang</name>
            <email>shidaobang@risesoft.net</email>
            <organization>risesoft</organization>
            <organizationUrl>https://www.risesoft.net</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>${gitee.url}</url>
        <connection>${gitee.connection}</connection>
        <developerConnection>${gitee.developerConnection}</developerConnection>
    </scm>

    <repositories>
        <repository>
            <id>aliyun-repo</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>y9-internet-repo</id>
            <url>https://svn.youshengyun.com:9900/nexus/repository/maven-public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <!-- <updatePolicy>always</updatePolicy> -->
                <!-- always,daily(default),interval:XXX,never -->
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>aliyun-repo-plugin</id>
            <url>https://maven.aliyun.com/repository/public</url>
        </pluginRepository>
        <pluginRepository>
            <id>y9-internet-repo-plugin</id>
            <url>https://svn.youshengyun.com:9900/nexus/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <properties>
        <gitee.url>https://gitee.com/risesoft-y9/y9-core</gitee.url>
        <gitee.connection>scm:git:https://gitee.com/risesoft-y9/y9-core.git</gitee.connection>
        <gitee.developerConnection>scm:git:https://gitee.com/risesoft-y9/y9-core.git</gitee.developerConnection>

        <revision>v9.7.0-SNAPSHOT</revision>

        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <resource.delimiter>@</resource.delimiter>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.build.timestamp.format>yyyy-MM-dd_HH_mm</maven.build.timestamp.format>
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Third Party -->
            <dependency>
                <groupId>com.github.oshi</groupId>
                <artifactId>oshi-core-java11</artifactId>
                <version>6.6.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <configuration>
                            <flattenMode>oss</flattenMode>
                            <pomElements>
                                <parent>expand</parent>
                                <dependencyManagement>interpolate</dependencyManagement>
                                <pluginManagement>interpolate</pluginManagement>
                                <build>keep</build>
                                <profiles>expand</profiles>
                                <properties>interpolate</properties>
                            </pomElements>
                        </configuration>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy-private-repo</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>flatten-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <repository>
                    <id>releases</id>
                    <url>https://svn.youshengyun.com:9900/nexus/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>snapshots</id>
                    <url>https://svn.youshengyun.com:9900/nexus/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>

        <profile>
            <id>deploy-maven-central</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>flatten-maven-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>mvn-central</publishingServerId>
                            <centralBaseUrl>https://central.sonatype.com</centralBaseUrl>
                            <deploymentName>${project.artifactId}-${project.version}</deploymentName>
                            <skipPublishing>false</skipPublishing>
                            <autoPublish>true</autoPublish>
                            <waitUntil>uploaded</waitUntil><!--validated uploaded-->
                            <checksums>required</checksums>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <!-- docker环境 -->
            <id>docker-jvm</id>
            <properties>
                <dir>docker</dir>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <configuration>
                            <mainClass>${start-class}</mainClass>
                            <excludes>
                                <exclude>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                </exclude>
                            </excludes>
                            <image>
                                <env>
                                    <BP_NATIVE_IMAGE>false</BP_NATIVE_IMAGE>
                                    <BP_JVM_VERSION>21</BP_JVM_VERSION>
                                </env>
                                <builder>paketobuildpacks/builder-jammy-base:latest</builder>
                                <name>svn.youshengyun.com:9923/${project.artifactId}-jvm:${project.version}</name>
                                <publish>true</publish>
                            </image>
                            <docker>
                                <publishRegistry>
                                    <username>publisher</username>
                                    <password>83204585</password>
                                </publishRegistry>
                            </docker>
                        </configuration>
                        <executions>
                            <execution>
                                <id>package</id>
                                <goals>
                                    <goal>repackage</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>generate-resources</id>
                                <goals>
                                    <goal>build-info</goal>
                                </goals>
                            </execution>
                            <execution>
                                <phase>install</phase>
                                <goals>
                                    <goal>build-image-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- docker环境 -->
            <id>docker-native</id>
            <properties>
                <dir>docker</dir>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <configuration>
                            <archive>
                                <manifestEntries>
                                    <Spring-Boot-Native-Processed>true</Spring-Boot-Native-Processed>
                                </manifestEntries>
                            </archive>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <configuration>
                            <mainClass>${start-class}</mainClass>
                            <excludes>
                                <exclude>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                </exclude>
                            </excludes>
                            <image>
                                <!--<builder>paketobuildpacks/builder-jammy-tiny</builder>
                                <buildpacks>
                                    <buildpack>gcr.io/paketo-buildpacks/graalvm</buildpack>
                                    <buildpack>gcr.io/paketo-buildpacks/java-native-image</buildpack>
                                </buildpacks>-->
                                <env>
                                    <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
                                    <BP_JVM_VERSION>21</BP_JVM_VERSION>
                                    <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>--enable-preview</BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
                                </env>
                                <name>svn.youshengyun.com:9923/${project.artifactId}-native:${project.version}</name>
                                <publish>true</publish>
                            </image>
                            <docker>
                                <publishRegistry>
                                    <username>publisher</username>
                                    <password>83204585</password>
                                </publishRegistry>
                            </docker>
                        </configuration>
                        <executions>
                            <execution>
                                <id>process-aot</id>
                                <goals>
                                    <goal>process-aot</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>

                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <!-- 修改注释的时候 勾选（避免有些工程没加） -->
            <id>javadoc</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>